[tool.poetry]
name = "gradio-test"
version = "0.1.0"
description = "Lang Chain Test"
authors = ["Shoei Nashimoto <shoei.nashimoto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
gradio = "^4.32.1"
langchain-openai = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
